methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:13: error: '(' expected but identifier found.
    if seenBaggle==true){
       ^MethodsReturning:19: error: illegal start of simple expression
  }
  ^