methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var seenBaggle=false
  while (seenBaggle==false){
    for (k<- 1 to 6){
      if (isOverBaggle==true){
      seenBaggle=true
      }
    forward()
    }
    for (k<- 1 to 6){
      backward()
    }
    if seenBaggle==true){
      return(seenBggle())
    }
    right()
    forward()
    left()
  }
  
}